# AnticlockwiseSearch

./: .env  .env.example  .gitignore  README.en.md  README.md  README.zh.md  docker-compose.yml
.github/workflows/: docker-image.yml
backend/: .dockerignore  Dockerfile  config.py  main.py  pyproject.toml  routes.py
backend/adapters/: audiobookshelf.py  base.py  calibreweb.py  filesystem.py  jellyfin.py  photoprism.py
backend/models/: search_result.py
frontend/: .dockerignore  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/assets/: main.css
